[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-duplicate-finder"
version = "0.1.3"
description = "Content-hash duplicate file detection with two-pass efficiency"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_duplicate_finder"]
