[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-duplicate-finder"
version = "0.2.0"
description = "Content-hash duplicate file detection with two-pass efficiency"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-duplicate-finder#readme"
Repository = "https://github.com/philiprehberger/py-duplicate-finder"
Issues = "https://github.com/philiprehberger/py-duplicate-finder/issues"
Changelog = "https://github.com/philiprehberger/py-duplicate-finder/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_duplicate_finder"]
